// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Should be clickable when url is defined 1`] = `
<styled.a
  href="https://brrr.money/"
  title="https://brrr.money/"
>
  <styled.div>
    <_outboundLink />
  </styled.div>
</styled.a>
`;

exports[`Icon Should be clickable when url is defined and the target should be _blank 1`] = `
<styled.a
  href="https://brrr.money/"
  rel="noreferrer"
  target="_blank"
  title="https://brrr.money/"
>
  <styled.div>
    <_outboundLink />
  </styled.div>
</styled.a>
`;
